--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-form": "^0.0.2",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@stitches/react": "1.2.8",
     "next": "latest",
     "react": "18.2.0",
@@ -15,6 +17,9 @@
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "eslint": "^8.37.0",
+    "eslint-config-next": "^13.2.4",
+    "prettier": "^2.8.7",
     "typescript": "^4.7.4"
   }
 }
